# rend3-issue-repro-example

./: Cargo.toml
src/: main.rs
